Changed environment variables to profile file